# drug_repurposing

./: Drug_Disease_pair_Recommender.ipynb  README.md  every_cure_embedding_generate.ipynb  hello.py  lightgcn_model_2.pkl  pyproject.toml
src/: model_train.py  saved_model.py
src/drugre/: data_loader.py  main.py  model_train.py  predictor.py  saved_model.py
src/drugre.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/drugrepo/: cli_api.py  predictor.py  saved_model.py
src/drugrepo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
